--- a/css/styles.css
+++ b/css/styles.css
@@ -484,7 +484,7 @@ header .container {
 /* ++++++++++++++++++++++ Contact Us Sections Here +++++++++++++++++ */
 
 .contact_Us {
-  background-image: url("../../assets/cow_img.jpg");
+  background-image: url("../assets/cow_img.jpg");
   background-size: cover;
   height: 389px;
   width: 1240px;
